[package]
name = "rwa_amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_amm"

[features]
default = []
local = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.31.0", features = ["memo", "metadata"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-memo = "5.0.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
num_enum = "0.7.2"
solana-security-txt = "1.1.1"
arrayref = { version = "0.3.6" }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.10.0"
static_assertions = "1.1.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num = "0.4.3"
const-crypto = "0.3.0"

[dev-dependencies]
proptest = "1.2.0"