[package]
name = "transfer-hook"
version = "0.1.0"
edition = "2021"

[lib]
name = "transfer_hook"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
local = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
spl-transfer-hook-interface = "=0.10.0"
spl-tlv-account-resolution = "=0.10.0"
spl-type-length-value = "=0.9.0"
spl-discriminator = "=0.4.1"
spl-token-metadata-interface = "=0.6.0"
